				Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       1.3 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.3.0


NEW FEATURES

    o	hessian argument added to deriv and its methods.  A new function
	deriv3 provides identical capabilities to deriv except that
	hessian is TRUE by default.

    o	New components in .Machine give the sizes of long, long long
	and long double C types (or 0 if they do not exist).

    o	postscript() allows user-specified encoding, with encoding
	files supplied for Windows, Mac, Unicode and various others,
	and with an appropriate platform-specific default.

    o	pdf() graphics driver.

    o	eigen() tests for symmetry with a numerical tolerance.

    o	file and pipe connections can be read with a user-specified
	encoding.

    o	New function checkFF() for checking foreign function calls.

    o	package.skeleton() helps with creating new packages.

    o	Generalised "birthday paradox" functions [pq]birthday.

    o	dist() can now handle missing values, and zeroes in the
	Canberra distance.

    o	New function difftime() and corresponding class for date/time 
	differences.

    o	Subtraction and logical comparison of objects from different
	date/time classes is now supported.  NB: the format for the
	difference of two objects of the same date/time class has
	changed, but only for objects generated by this version, not
	those generated by earlier ones.

    o	stl() has more optional arguments for fine tuning,
	a summary() and an improved plot() method.

    o	The four bessel[IJKY](x,nu) functions are now defined for nu < 0.

    o	New replacement functions substr<-() and substring<-().

    o	Under Unix, shlib modules for add-on packages are now linked
	against R as a shared library (`libR') if this exists.	(This
	allows for improved embedding of R into other applications.)
