@@ -328,6 +328,7 @@ SEXP do_signif(SEXP, SEXP, SEXP, SEXP);
 SEXP do_strheight(SEXP, SEXP, SEXP, SEXP);
 SEXP do_strwidth(SEXP, SEXP, SEXP, SEXP);
 SEXP do_sink(SEXP, SEXP, SEXP, SEXP);
+SEXP do_sinknumber(SEXP, SEXP, SEXP, SEXP);
 SEXP do_sort(SEXP, SEXP, SEXP, SEXP);
 SEXP do_split(SEXP, SEXP, SEXP, SEXP);
 SEXP do_stop(SEXP, SEXP, SEXP, SEXP);
@@ -395,6 +396,8 @@ SEXP do_readlines(SEXP, SEXP, SEXP, SEXP);
 SEXP do_writelines(SEXP, SEXP, SEXP, SEXP);
 SEXP do_readbin(SEXP, SEXP, SEXP, SEXP);
 SEXP do_writebin(SEXP, SEXP, SEXP, SEXP);
+SEXP do_readchar(SEXP, SEXP, SEXP, SEXP);
+SEXP do_writechar(SEXP, SEXP, SEXP, SEXP);
 SEXP do_open(SEXP, SEXP, SEXP, SEXP);
 SEXP do_isopen(SEXP, SEXP, SEXP, SEXP);
 SEXP do_isincomplete(SEXP, SEXP, SEXP, SEXP);
