@@ -587,6 +587,7 @@ FUNTAB R_FunTab[] =
 {"environment<-",do_envirgets,	0,	1,	2,	PP_FUNCALL},
 {"options",	do_options,	0,	11,	1,	PP_FUNCALL},
 {"sink",	do_sink,	0,	111,	3,	PP_FUNCALL},
+{"sink.number",	do_sinknumber,	0,	111,	1,	PP_FUNCALL},
 {"lib.fixup",	do_libfixup,	0,	111,	2,	PP_FUNCALL},
 {"pos.to.env",	do_pos2env,	0,	1,	1,	PP_FUNCALL},
 {"lapply",	do_lapply,	0,	10,	2,	PP_FUNCALL},
@@ -742,6 +743,8 @@ FUNTAB R_FunTab[] =
 {"writeLines", 	do_writelines,	0,      11,     3,      PP_FUNCALL},
 {"readBin", 	do_readbin,	0,      11,     5,      PP_FUNCALL},
 {"writeBin", 	do_writebin,	0,      11,     4,      PP_FUNCALL},
+{"readChar", 	do_readchar,	0,      11,     2,      PP_FUNCALL},
+{"writeChar", 	do_writechar,	0,      11,     4,      PP_FUNCALL},
 {"open", 	do_open,	0,      11,     3,      PP_FUNCALL},
 {"isOpen", 	do_isopen,	0,      11,     2,      PP_FUNCALL},
 {"isIncomplete",do_isincomplete,0,      11,     1,      PP_FUNCALL},
